deploy: add homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gsap-landing",
+  "homepage": "https://nemesisua.github.io/gsap-landing/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
